--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 <![endif]-->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E5878XG4EL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E5878XG4EL');
+</script>
+
 <body>
 
     <!-- =============== Start of Header 1 Navigation =============== -->
