--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             <div class="container">
 
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <span>Copyright &copy; <a href="#">Niharika Sai Duggi</a>. All Rights Reserved</span>
+                    <span>Copyright &copy; <a href="#">Charan Basireddy</a>. All Rights Reserved</span>
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-xs-12">
