Updated experience in index.html

--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
                     <div class="experience-body">
                         <p>Responsibilities:</p>
                         <ul class="list mt10">
-                            <li>Built and analyzed customized financial data feeds for investment banks </li>
+                            <li>Configured and setup of Jenkins on EC2 instance. Configuration of slave nodes with the master node in Jenkins server
+for distributed load balancing </li>
 
-                            <li>Prepared Go-To-Market strategy, evaluate product initiatives and built data analyzing automation tools</li>
+                            <li>Integration of multiple CI/CD DevOps tools like Bitbucket, Maven with Jenkins </li>
 
-                            <li>Established analytical framework for team: ad-hoc analysis, automated dashboards, and self-service reporting tools to surface data to partners </li>
+                            <li>Installation and setting up of a Kubernetes cluster, ELK and EFK stacks on AWS EC2 instance </li>
 
-                            <li>Analyzed gigabytes of stock market and ESG data for all the visible patterns, anomalies and troubleshooting different client queries regarding the data </li>
                         </ul>
                     </div>
                     <!-- End of Work Experience Body -->
