Updated experience index.html

--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@ for distributed load balancing </li>
                     <div class="experience-header clearfix">
                         <img src="images/companies/envato.svg" alt="">
                         <div>
-                            <h4>Knowledge Solutions India</h4>
-                            <h5><small>Intern</small></h5>
+                            <h4>Clemson Libraries</h4>
+                            <h5><small>Data Intern</small></h5>
                         </div>
-                        <h6 class="time">2020 - 2021</h6>
+                        <h6 class="time">2023 - 2024</h6>
                     </div>
                     <!-- End of Work Experience Header -->
 
@@ -410,9 +410,13 @@ for distributed load balancing </li>
                     <div class="experience-body">
                         <p>Responsibilities:</p>
                         <ul class="list mt10">
-                            <li>Designed and implemented UI and UX to build wireframe for an instant messaging android application</li>
+                            <li>Collaborated with an interdisciplinary team to automate data scraping and XML conversion that reduced the time
+spent on the report by 90% </li>
 
-                            <li>Collaborated with Scientists for problem analysis, solving and security of communication link</li>
+                            <li>Analysed and predicted the power & water consumption through time series analysis that helped in controlling
+resource dissipation </li>
+			<li>Upskilled students and researchers through workshops on analytical tools (Power BI, SQL,Excel) and Machine
+learning libraries </li>
                         </ul>
                     </div>
                     <!-- End of Work Experience Body -->
