--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <div class="education-header clearfix">
                         <img src="images/companies/Clemson_logo.png" alt="">
                         <div>
-                            <h4>Master <small>- Computer Science</small></h4>
+                            <h4>Master of Science <small>- Computer Science</small></h4>
                             <h5>Clemson University</h5>
                         </div>
                         <h6 class="time">2022 - Present</h6>
@@ -323,7 +323,7 @@
                     <div class="education-header clearfix">
                         <img src="images/companies/SKU.jpeg" alt="">
                         <div>
-                            <h4>Bachelor <small>- Computer Engineering</small></h4>
+                            <h4>Bachelor of Science <small>- Computer Engineering</small></h4>
                             <h5>Sri KrishnaDevaraya University, India </h5>
                         </div>
                         <h6 class="time">2016 - 2020</h6>
