Updated the work exp and added certifications

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <!-- Profile Title -->
                         <div class="profile-title">
                             <h2 class="capitalize">Charan Basireddy</h2>
-                            <h5 class="pt10">DevOps Engineer</h5>
+                            <h5 class="pt10">Data Engineer</h5>
                         </div>
 
                         <!-- Start of Social Media Buttons -->
@@ -232,8 +232,8 @@
 
                         <!-- Profile Details -->
                         <div class="profile-details mt40">
-                            <p>An independent and self-motivated future CS graduate, with 2 years of industry experience and
-                                passion for technology, eager to secure summer internship with a progressive firm that can benefit from my tech skills.
+                            <p>An independent and self-motivated future CS graduate, with 3 years of industry experience and
+                                passion for technology, eager to Data Engineer position with a progressive firm that can benefit from my tech skills.
                                 </p>
                         </div>
                     </div>
@@ -306,7 +306,10 @@
 
                     <!-- Start of Education Body -->
                     <div class="education-body">
-                        <p>Having an 1 year of experience as a Application Development Associate at Accenture where my responsibilities has mostly been deployments,maintaining version control, I decided to transition in MlOps domain,Having a Major in Computer Science with Machine Learning Specialisation.Having posses domain knowledge on  I have choosen to complete my graduation in Clemson which is great place for research work in lots of exciting fields</p>
+                        <ul class="list mt10">
+                            <p>Major : Computer Science</p>
+                            <p>Minor : Statistics and Business Analytics<p>
+                        </ul>
                     </div>
                     <!-- End of Education Body -->
 
@@ -332,8 +335,8 @@
 
                     <!-- Start of Education Body -->
                     <div class="education-body">
-                        <p>Though I had Bachelors in Computer Engineering I was always fascinated by Machine Learning which brought me into the Computer Science.The foundations that I learned at SKU has made my transition into Machine Learning smooth.SKU will always will be one of the best things that happened to me.</p>
-                    </div>
+                        <p>Major : Computer Engineering</p>
+                        <p>Minor : Computer Science and Business Analytics<p>                    </div>
                     <!-- End of Education Body -->
 
                 </div>
@@ -348,88 +351,132 @@
 
 
 
-    <!-- ===== Start of Work Experience Section ===== -->
-    <section class="work-experience ptb80">
-        <div class="container">
+<!-- ===== Start of Work Experience Section ===== -->
+<section class="work-experience ptb80">
+    <div class="container">
 
-            <div class="col-md-12 text-center">
-                <h3 class="pb60">Work Experience</h3>
-            </div>
-
-            <!-- Start of Work Experience Column -->
-            <div class="col-md-12">
-                <div class="item-block shadow-hover">
-
-                    <!-- Start of Work Experience Header -->
-                    <div class="experience-header clearfix">
-                        <img src="images/companies/envato.svg" alt="">
-                        <div>
-                            <h4>Accenture Solutions Pvt Ltd</h4>
-                            <h5><small>Application Development Associate</small></h5>
-                        </div>
-                        <h6 class="time">06/2021 - 08/2022</h6>
-                    </div>
-                    <!-- End of Work Experience Header -->
-
-                    <!-- Start of Work Experience Body -->
-                    <div class="experience-body">
-                        <p>Responsibilities:</p>
-                        <ul class="list mt10">
-                            <li>Configured and setup of Jenkins on EC2 instance. Configuration of slave nodes with the master node in Jenkins server
-for distributed load balancing </li>
-
-                            <li>Integration of multiple CI/CD DevOps tools like Bitbucket, Maven with Jenkins </li>
-
-                            <li>Installation and setting up of a Kubernetes cluster, ELK and EFK stacks on AWS EC2 instance </li>
-
-                        </ul>
-                    </div>
-                    <!-- End of Work Experience Body -->
-
-                </div>
-            </div>
-            <!-- End of Work Experience Column -->
-
-
-            <!-- Start of Work Experience Column -->
-            <div class="col-md-12 mt40">
-                <div class="item-block shadow-hover">
-
-                    <!-- Start of Work Experience Header -->
-                    <div class="experience-header clearfix">
-                        <img src="images/companies/envato.svg" alt="">
-                        <div>
-                            <h4>Clemson Libraries</h4>
-                            <h5><small>Data Intern</small></h5>
-                        </div>
-                        <h6 class="time">2023 - 2024</h6>
-                    </div>
-                    <!-- End of Work Experience Header -->
-
-                    <!-- Start of Work Experience Body -->
-                    <div class="experience-body">
-                        <p>Responsibilities:</p>
-                        <ul class="list mt10">
-                            <li>Collaborated with an interdisciplinary team to automate data scraping and XML conversion that reduced the time
-spent on the report by 90% </li>
-
-                            <li>Analysed and predicted the power & water consumption through time series analysis that helped in controlling
-resource dissipation </li>
-			<li>Upskilled students and researchers through workshops on analytical tools (Power BI, SQL,Excel) and Machine
-learning libraries </li>
-                        </ul>
-                    </div>
-                    <!-- End of Work Experience Body -->
-
-                </div>
-            </div>
-            <!-- End of Work Experience Column -->
-
-
+        <div class="col-md-12 text-center">
+            <h3 class="pb60">Work Experience</h3>
         </div>
-    </section>
-    <!-- ===== End of Work Experience Section ===== -->
 
+        <!-- Start of Work Experience 1 Column (Commscope - Most Recent) -->
+        <div class="col-md-12 mt40" style="margin-bottom: 60px;">
+            <div class="item-block shadow-hover">
+
+                <!-- Start of Work Experience Header -->
+                <div class="experience-header clearfix">
+                    <img src="images/companies/envato.svg" alt="">
+                    <div>
+                        <h4>Commscope</h4>
+                        <h5><small>Data Analyst Intern</small></h5>
+                    </div>
+                    <h6 class="time">05/2024 - 07/2024</h6>
+                </div>
+                <!-- End of Work Experience Header -->
+
+                <!-- Start of Work Experience Body -->
+                <div class="experience-body">
+                    <p>Responsibilities:</p>
+                    <ul class="list mt10">
+                        <li>Successfully migrated price performance dashboards from Tableau to Power BI with complex DAX measures</li>
+                        <li>Automated the quote system, reducing the turnover period for sales under $10,000 by 72%</li>
+                        <li>Executed ETL processes using Alteryx, Spark, and SQL, reducing data loading time from 300 minutes to 25 minutes</li>
+                    </ul>
+                </div>
+                <!-- End of Work Experience Body -->
+
+            </div>
+        </div>
+        <!-- End of Work Experience Column -->
+
+        <!-- Start of Work Experience 2 Column (Clemson Libraries) -->
+        <div class="col-md-12 mt40" style="margin-bottom: 60px;">
+            <div class="item-block shadow-hover">
+
+                <!-- Start of Work Experience Header -->
+                <div class="experience-header clearfix">
+                    <img src="images/companies/envato.svg" alt="">
+                    <div>
+                        <h4>Clemson Libraries</h4>
+                        <h5><small>Data Scientist Intern</small></h5>
+                    </div>
+                    <h6 class="time">05/2023 - 12/2024</h6>
+                </div>
+                <!-- End of Work Experience Header -->
+
+                <!-- Start of Work Experience Body -->
+                <div class="experience-body">
+                    <p>Responsibilities:</p>
+                    <ul class="list mt10">
+                        <li>Collaborated with an interdisciplinary team to automate data scraping and XML conversion that reduced the time spent on reports by 90%</li>
+                        <li>Analyzed and predicted power & water consumption through time series analysis to control resource dissipation</li>
+                        <li>Upskilled students and researchers through workshops on analytical tools (Power BI, SQL, Excel) and machine learning libraries</li>
+                    </ul>
+                </div>
+                <!-- End of Work Experience Body -->
+
+            </div>
+        </div>
+        <!-- End of Work Experience Column -->
+
+        <!-- Start of Work Experience 3 Column (Accenture) -->
+        <div class="col-md-12" style="margin-bottom: 60px;">
+            <div class="item-block shadow-hover">
+
+                <!-- Start of Work Experience Header -->
+                <div class="experience-header clearfix">
+                    <img src="images/companies/envato.svg" alt="">
+                    <div>
+                        <h4>Accenture Solutions Pvt Ltd</h4>
+                        <h5><small>Application Development Associate</small></h5>
+                    </div>
+                    <h6 class="time">08/2021 - 10/2022</h6>
+                </div>
+                <!-- End of Work Experience Header -->
+
+                <!-- Start of Work Experience Body -->
+                <div class="experience-body">
+                    <p>Responsibilities:</p>
+                    <ul class="list mt10">
+                        <li>Configured and set up Jenkins on EC2 instance and slave nodes for distributed load balancing</li>
+                        <li>Integrated multiple CI/CD DevOps tools like Bitbucket and Maven with Jenkins</li>
+                        <li>Installed and set up Kubernetes cluster, ELK, and EFK stacks on AWS EC2 instance</li>
+                    </ul>
+                </div>
+                <!-- End of Work Experience Body -->
+
+            </div>
+        </div>
+        <!-- End of Work Experience Column -->
+
+    </div>
+</section>
+<!-- ===== End of Work Experience Section ===== -->
+
+
+<!-- ===== Start of Certifications Section ===== -->
+<section class="certifications ptb80">
+    <div class="container">
+
+        <div class="col-md-12 text-center">
+            <h3 class="pb60">Certifications</h3>
+        </div>
+
+        <!-- Start of Certifications List -->
+        <div class="col-md-12 mt40">
+            <ul class="cert-list" style="font-size: 1.8em;"> <!-- Increased font size for certifications -->
+                <li><a href="https://www.credly.com/badges/aa7181b4-09a2-4042-badf-c9002f00deb3/linked_in_profile">AWS Certified: Solutions Architect Associate </a></li> <!-- AWS Certification -->
+                <li><a href="https://learn.microsoft.com/en-us/users/basireddycharan-9795/credentials/5f21702c1c8c221d?ref=https%3A%2F%2Fwww.linkedin.com%2F">Microsoft Certified: Azure Data Scientist Associate </a></li> <!-- Azure Data Scientist -->
+                <li><a href="https://learn.microsoft.com/en-us/users/basireddycharan-9795/credentials/6a42854abbdd1b2f?ref=https%3A%2F%2Fwww.linkedin.com%2F">Microsoft Certified: Power BI Data Analyst Associate </a></li> <!-- Power BI Data Analyst -->
+                <li><a href="https://www.credly.com/badges/53fcf329-4581-468c-8b73-12b66ec63e52/">Alteryx Designer Core Certification </a></li> <!-- Alteryx Certification -->
+                <li><a href="#">GIS Certification </a></li> <!-- GIS Certification -->
+            </ul>
+        </div>
+        <!-- End of Certifications List -->
+
+    </div>
+</section>
+<!-- ===== End of Certifications Section ===== -->
 
 
 
